# sidekick-downloads

./: .gitignore  README.md  artifact_appendix.tex
emulation/: README.md  benchmark.py  common.py  main.py  network.py
emulation/benchmark/: __init__.py  http_benchmark.py  iperf_benchmark.py  media_benchmark.py  multicast_benchmark.py  result.py
emulation/tests/: proxy_tester.py  test_cli.py  test_common.py  test_http_benchmark.py  test_media_benchmark.py  test_multicast_benchmark.py  test_network.py  test_result.py
majd-experiment/: common.py  experiment.py  ge_data.py  ge_data_nov_20_meeting.py  ge_iid.py  ge_vs_iid.py
majd-experiment/data/: http.py  media.py  multicast.py
majd-experiment/treatments/: multicast.py
media/: Cargo.toml
media/src/: buffer.rs  lib.rs  packet.rs  sidekick.rs  statistics.rs  timestamp.rs
notebook/: README.md  common.py  cpu_overheads.ipynb  data.py  data_analysis.ipynb  debugging_pcaps.ipynb  e2e_experiments.ipynb  experiment.py  ge_benchmark.ipynb  http3_benchmark.ipynb  http_benchmark.ipynb  media_benchmark.ipynb  multicast_benchmark.ipynb  network_statistics.ipynb  proxy_statistics.ipynb  quack_microbenchmarks.ipynb  sidekick_configurations.ipynb  sidekick_congestion.ipynb  spurious_retransmissions.ipynb
notebook/data/: __init__.py  http.py
notebook/treatments/: media.py  multicast.py  network_settings.py  picoquic.py
proxy/: Cargo.toml  README.md
proxy/src/: buffer.rs  cache.rs  cycles.rs  identifier.rs  lib.rs  main.rs  sidekick.rs  socket.rs  stream.rs
proxy/src/cache/: base.rs  mod.rs  multicast.rs
proxy/src/sidekick/: base.rs  mod.rs  multicast.rs
quacker/: Cargo.toml  README.md
quacker/include/: quacker.h
quacker/src/: buffer.rs  ffi.rs  lib.rs  main.rs  print_quacker.rs  quacker.rs  sidekick.rs  socket.rs  udp_quacker.rs
real-world/: README.md  download_binary.sh  http.sh  linux_bridge.sh  media.sh  proxy.sh
rtunnel/: Cargo.toml
rtunnel/src/: ack.rs  buffer.rs  main.rs  net.rs  tunnel.rs
sidekick_utils/: Cargo.toml
sidekick_utils/include/: sidekick_utils.h
sidekick_utils/src/: buffer.rs  discovery.rs  ffi.rs  identifier.rs  lib.rs  reset.rs  socket.rs
sidekick_utils/src/packet/: discovery.rs  mod.rs  reset.rs  (+1 more)
