[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# Taken from https://github.com/ygina/sidekick/blob/main/sidekick/Cargo.toml
[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1", features = ["net", "sync", "rt", "time", "macros", "io-util", "rt-multi-thread"] }
log = "0.4.17"
env_logger = "0.9.3"
libc = "0.2.137"
signal-hook = "0.3.15"
pcap = "1.1.0"
rand = "0.8.5"
chrono = "0.4.39"
flexi_logger = "0.29.8"
quack = { path = "../deps/quack" }
sidekick-utils = { path = "../sidekick_utils/" }

[[bin]]
name = "bridge"

[[bin]]
name = "sidekick"