[package]
name = "quacker"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"

[lib]
name = "quacker"
crate-type = ["rlib", "cdylib"]

[dependencies]
quack = { path = "../deps/quack", features = ["strawmen"] }
sidekick-utils = { path = "../sidekick_utils/" }
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1", features = ["net", "sync", "rt", "time", "rt-multi-thread", "macros", "io-util"] }
log = "0.4.17"
env_logger = "0.9.3"
libc = "0.2.137"
signal-hook = "0.3.15"
pcap = "1.1.0"
rand = "0.8.5"
socket2 = "0.5.8"

[features]
default = []

[[bin]]
name = "quacker"